--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "terra-demo",
+  "name": "terra",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,13 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.2.2",
+    "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "15.6.0",
-    "@types/react": "17.0.6",
-    "typescript": "4.2.4"
+    "@types/node": "15.12.2",
+    "@types/react": "17.0.11",
+    "typescript": "4.3.2"
   }
 }
