--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "1.0.13",
+    "@chakra-ui/react": "1.6.3",
+    "@emotion/react": "11.4.0",
+    "@emotion/styled": "11.3.0",
+    "framer-motion": "4.1.17",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -15,6 +20,7 @@
   "devDependencies": {
     "@types/node": "15.12.2",
     "@types/react": "17.0.11",
+    "@types/react-dom": "17.0.7",
     "typescript": "4.3.2"
   }
 }
