--- a/web/package.json
+++ b/web/package.json
@@ -15,14 +15,12 @@
     "framer-motion": "4.1.17",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-grid-layout": "1.2.5"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "15.12.2",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.7",
-    "@types/react-grid-layout": "1.1.1",
     "typescript": "4.3.2"
   }
 }
