--- a/web/package.json
+++ b/web/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/react": "1.6.3",
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
+    "date-fns": "2.22.1",
     "framer-motion": "4.1.17",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/node": "15.12.2",
