--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-table": "7.7.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
