--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11.3.0",
     "date-fns": "2.22.1",
     "framer-motion": "4.1.17",
+    "lodash.isfunction": "3.0.9",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
