--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "11.3.0",
     "date-fns": "2.22.1",
     "framer-motion": "4.1.17",
-    "lodash.isfunction": "3.0.9",
+    "lodash": "4.17.21",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,6 +22,7 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "4.14.170",
     "@types/node": "15.12.2",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.7",
