--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "terra",
+  "name": "terra-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,8 @@
     "lodash": "4.17.21",
     "next": "10.2.3",
     "react": "17.0.2",
+    "react-dnd": "14.0.2",
+    "react-dnd-html5-backend": "14.0.0",
     "react-dom": "17.0.2",
     "react-table": "7.7.0",
     "uuid": "8.3.2"
