--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,20 @@
 # dependencies
 node_modules
-.pnp
-.pnp.js
 
-# testing
+# test output
 coverage
+.nyc_output
 
-# next.js
+# build output
 .next
-out
-
-# production
 build
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# env files
 .env.local
 .env.development.local
 .env.test.local
@@ -30,3 +22,7 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# misc
+*.pem
+.DS_Store
