--- a/web/package.json
+++ b/web/package.json
@@ -4,30 +4,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "lint": "next lint --dir src",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier -w ."
   },
   "dependencies": {
     "@chakra-ui/icons": "1.0.13",
-    "@chakra-ui/react": "1.6.3",
+    "@chakra-ui/react": "1.6.4",
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
     "date-fns": "2.22.1",
     "framer-motion": "4.1.17",
     "lodash": "4.17.21",
-    "next": "10.2.3",
+    "next": "11.0.1",
     "react": "17.0.2",
     "react-dnd": "14.0.2",
     "react-dnd-html5-backend": "14.0.0",
-    "react-dom": "17.0.2",
-    "react-table": "7.7.0",
-    "uuid": "8.3.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/lodash": "4.14.170",
-    "@types/node": "15.12.2",
+    "@types/node": "15.12.4",
     "@types/react": "17.0.11",
-    "@types/react-dom": "17.0.7",
-    "typescript": "4.3.2"
+    "@types/react-dom": "17.0.8",
+    "@typescript-eslint/eslint-plugin": "4.28.0",
+    "eslint": "7.29.0",
+    "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "8.3.0",
+    "prettier": "2.3.1",
+    "typescript": "4.3.4"
   }
 }
