--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "1.6.4",
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
+    "axios": "0.21.1",
     "date-fns": "2.22.1",
     "framer-motion": "4.1.17",
     "lodash": "4.17.21",
@@ -21,7 +22,8 @@
     "react": "17.0.2",
     "react-dnd": "14.0.2",
     "react-dnd-html5-backend": "14.0.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "3.17.2"
   },
   "devDependencies": {
     "@types/lodash": "4.14.170",
@@ -32,7 +34,7 @@
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "8.3.0",
-    "prettier": "2.3.1",
+    "prettier": "2.3.2",
     "typescript": "4.3.4"
   }
 }
