Add use-tickets hook

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@/lib/*": ["lib/*"],
       "@/data/*": ["data/*"],
+      "@/hooks/*": ["hooks/*"],
       "@/types/*": ["types/*"],
       "@/components/*": ["components/*"]
     },
