--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -8,6 +8,7 @@
       "@/data/*": ["data/*"],
       "@/hooks/*": ["hooks/*"],
       "@/types/*": ["types/*"],
+      "@/constants/*": ["constants/*"],
       "@/components/*": ["components/*"]
     },
     "allowJs": true,
