--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "1.6.4",
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
+    "@hookform/resolvers": "2.6.0",
     "axios": "0.21.1",
     "date-fns": "2.22.1",
     "framer-motion": "4.1.17",
@@ -24,7 +25,9 @@
     "react-dnd": "14.0.2",
     "react-dnd-html5-backend": "14.0.0",
     "react-dom": "17.0.2",
-    "react-query": "3.17.2"
+    "react-hook-form": "7.10.0",
+    "react-query": "3.17.2",
+    "superstruct": "0.15.2"
   },
   "devDependencies": {
     "@types/lodash": "4.14.170",
