--- a/web/package.json
+++ b/web/package.json
@@ -19,8 +19,10 @@
     "axios": "0.21.1",
     "date-fns": "2.22.1",
     "framer-motion": "4.1.17",
+    "isemail": "3.2.0",
     "lodash": "4.17.21",
     "next": "11.0.1",
+    "phone": "2.4.21",
     "react": "17.0.2",
     "react-dnd": "14.0.2",
     "react-dnd-html5-backend": "14.0.0",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@types/lodash": "4.14.170",
     "@types/node": "15.12.4",
+    "@types/phone": "2.4.1",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
     "@typescript-eslint/eslint-plugin": "4.28.0",
