--- a/web/package.json
+++ b/web/package.json
@@ -18,8 +18,8 @@
     "@hookform/resolvers": "2.6.0",
     "axios": "0.21.1",
     "date-fns": "2.22.1",
+    "email-addresses": "4.0.0",
     "framer-motion": "4.1.17",
-    "isemail": "3.2.0",
     "lodash": "4.17.21",
     "next": "11.0.1",
     "phone": "2.4.21",
