--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "react-dnd-html5-backend": "14.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "7.12.0",
+    "react-icons": "4.2.0",
     "react-query": "3.19.0",
     "superstruct": "0.15.2"
   },
