Disable return type requirement

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -5,5 +5,9 @@
     "plugin:@typescript-eslint/recommended",
     "next",
     "prettier"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
+  }
 }
