--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -7,6 +7,7 @@
     "prettier"
   ],
   "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off"
   }
