--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,6 @@
     "@chakra-ui/react": "1.6.6",
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
-    "@hookform/resolvers": "2.8.0",
     "axios": "0.21.1",
     "date-fns": "2.23.0",
     "dotenv": "10.0.0",
@@ -32,8 +31,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "7.12.2",
     "react-icons": "4.2.0",
-    "react-query": "3.19.6",
-    "superstruct": "0.15.2"
+    "react-query": "3.19.6"
   },
   "devDependencies": {
     "@types/lodash": "4.14.172",
