--- a/web/package.json
+++ b/web/package.json
@@ -17,11 +17,13 @@
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
     "axios": "0.21.4",
+    "chance": "1.1.8",
     "date-fns": "2.23.0",
     "dotenv": "10.0.0",
     "email-addresses": "5.0.0",
     "framer-motion": "4.1.17",
     "lodash": "4.17.21",
+    "minimist": "1.2.5",
     "mongoose": "5.13.7",
     "next": "11.1.2",
     "phone": "3.1.6",
@@ -34,7 +36,9 @@
     "react-query": "3.23.2"
   },
   "devDependencies": {
+    "@types/chance": "1.1.3",
     "@types/lodash": "4.14.172",
+    "@types/minimist": "1.2.2",
     "@types/node": "16.9.1",
     "@types/phone": "2.4.1",
     "@types/react": "17.0.20",
