--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "dotenv": "10.0.0",
     "email-addresses": "5.0.0",
     "framer-motion": "4.1.17",
+    "hex-alpha": "1.3.0",
     "lodash": "4.17.21",
     "minimist": "1.2.5",
     "mongoose": "5.13.7",
